--- a/presentations/ppt_1.tex
+++ b/presentations/ppt_1.tex
@@ -1,9 +1,23 @@
 \documentclass[default]{beamer}
 
+\mode<presentation>
+{
+  \usetheme{Goettingen}      % or try Darmstadt, Madrid, Warsaw, ...
+  \usecolortheme{default} % or try albatross, beaver, crane, ...
+  \usefonttheme{default}  % or try serif, structurebold, ...
+  \setbeamertemplate{navigation symbols}{}
+  \setbeamertemplate{caption}[numbered]} 
+
+\usepackage[english]{babel}
+\usepackage[utf8x]{inputenc}
+
+
+
+
 \title[OLM]{Online Leave Management System}
-\subtitle[Presentation]{}
+\subtitle{Presentation}
 \date{\today}
-\author[Group 2]{}
+\author[Group 2]{Group 2}
 \institute[MEC]{Govt. Model Engineering College,Thrikakkara}
 
 
@@ -11,12 +25,14 @@
 		
 	\frame{\maketitle}	
 	
-	\begin{frame}
-	this is my first slide
-	\end{frame}
+	\section{Introduction}
+		\begin{frame}{Introduction}
+		this is my first slide
+		\end{frame}
 	
-	\begin{frame}
-	this is my 2nd and last slide
-	\end{frame}
+	\section{Report of Work Done}
+		\begin{frame}{Report of Work Done}
+		this is my 2nd and last slide
+		\end{frame}
 
 \end{document}
