--- a/presentations/ppt_1.tex
+++ b/presentations/ppt_1.tex
@@ -27,12 +27,40 @@
 	
 	\section{Introduction}
 		\begin{frame}{Introduction}
+		sdsd
+		\end{frame}			
+	
+	
+	\section{Report of Work Done}
+		\subsection{Literature Survey Report}				
+		\begin{frame}{Report of Work Done}{Literature Survey Report}
+		this is my first slide
+		\end{frame}
+		
+		\subsection{System Study Report}			
+		\begin{frame}{Report of Work Done}{System Study Report}
 		this is my first slide
 		\end{frame}
 	
-	\section{Report of Work Done}
-		\begin{frame}{Report of Work Done}
+	\section{Proposed Project}
+	\subsection{Problem Statement}				
+		\begin{frame}{Proposed Project}{Problem Statement}
 		this is my 2nd and last slide
 		\end{frame}
+		
+	\subsection{Proposed Solution}						
+		\begin{frame}{Proposed Project}{Problem Solution}
+		this is my 2nd and last slide
+		\end{frame}
+		
+	\subsection{Hardware \& Software Requirements}						
+		\begin{frame}{Proposed Project}{Hardware \& Software Requirements} 
+		this is my 2nd and last slide
+		\end{frame}
+	
+	\section{Weekly Work Schedule}
+		\begin{frame}{Weekly Work Schedule}
+		zxzx
+		\end{frame}			
 
 \end{document}
