--- a/presentations/ppt_1.tex
+++ b/presentations/ppt_1.tex
@@ -17,50 +17,76 @@
 \title[OLM]{Online Leave Management System}
 \subtitle{Presentation}
 \date{\today}
-\author[Group 2]{Group 2}
+\author[Group 9]{Group 9}
 \institute[MEC]{Govt. Model Engineering College,Thrikakkara}
 
 
 \begin{document}
 		
-	\frame{\maketitle}	
+	\begin{frame}		
+		\titlepage
+		\begin{flushright}
+		\small{Krishna T M\\Akash Geevarghese\\Albin Plathottatil\\Vanisree D}
+		\end{flushright}
+	\end{frame}
 	
 	\section{Introduction}
 		\begin{frame}{Introduction}
-		sdsd
+		Enter Text 
 		\end{frame}			
 	
 	
 	\section{Report of Work Done}
 		\subsection{Literature Survey Report}				
 		\begin{frame}{Report of Work Done}{Literature Survey Report}
-		this is my first slide
+		Enter Text
 		\end{frame}
 		
 		\subsection{System Study Report}			
 		\begin{frame}{Report of Work Done}{System Study Report}
-		this is my first slide
+		Enter Text
 		\end{frame}
 	
 	\section{Proposed Project}
 	\subsection{Problem Statement}				
 		\begin{frame}{Proposed Project}{Problem Statement}
-		this is my 2nd and last slide
+		Enter Text
 		\end{frame}
 		
 	\subsection{Proposed Solution}						
 		\begin{frame}{Proposed Project}{Problem Solution}
-		this is my 2nd and last slide
+		Enter Text
 		\end{frame}
 		
 	\subsection{Hardware \& Software Requirements}						
 		\begin{frame}{Proposed Project}{Hardware \& Software Requirements} 
-		this is my 2nd and last slide
+		Enter Text
 		\end{frame}
 	
 	\section{Weekly Work Schedule}
 		\begin{frame}{Weekly Work Schedule}
-		zxzx
+
+		\begin{center}
+		\begin{tabular}{|c|c|}
+		\hline
+		Week & Work to be Completed\\
+		\hline
+		1 & enter text\\
+		\hline
+		2 & enter text\\
+		\hline
+		3 & enter text\\
+		\hline
+		4 & enter text\\
+		\hline
+		5 & enter text\\
+		\hline
+		6 & enter text\\
+		\hline
+		7 & enter text\\
+		\hline
+		\end{tabular}				
+		\end{center}				
 		\end{frame}			
 
 \end{document}
