--- a/presentations/ppt_1.tex
+++ b/presentations/ppt_1.tex
@@ -15,7 +15,7 @@
 
 
 \title[OLM]{Online Leave Management System}
-\subtitle{Presentation}
+\subtitle{Project Proposal}
 \date{\today}
 \author[Group 9]{Group 9}
 \institute[MEC]{Govt. Model Engineering College,Thrikakkara}
@@ -23,67 +23,100 @@
 
 \begin{document}
 		
-	\begin{frame}		
+	\begin{frame}  %Title page		
 		\titlepage
 		\begin{flushright}
-		\small{Krishna T M\\Akash Geevarghese\\Albin Plathottatil\\Vanisree D}
+		\small{29 Krishna T M\\5 Akash Geevarghese\\9 Albin Plathottatil\\62 Vanisree D}
 		\end{flushright}
 	\end{frame}
 	
-	\section{Introduction}
+	\section{Introduction} %Introduction
+	
 		\begin{frame}{Introduction}
-		Enter Text 
+		\begin{itemize}
+	    \item This project is aimed at developing an online leave management system that is of importance in colleges and institutions .
+		\item This system can be used to automate the workflow of leave applications and their approvals.
+		\item There are features like email notifications,
+cancellation of leave, automatic approval of leave, report generators etc in this system.	
+		\end{itemize}				
 		\end{frame}			
 	
 	
-	\section{Report of Work Done}
-		\subsection{Literature Survey Report}				
+	\section{Report of Work Done} % WD
+		\subsection{Literature Survey Report}	%literature survey			
 		\begin{frame}{Report of Work Done}{Literature Survey Report}
-		Enter Text
+		\begin{itemize}
+		\item \textbf{Employee Leave Management System}
+		\\ This system is deployed in Rashtrasant Maharaj University,Nagpur.It allows manager to manage leaves and replacements for better scheduling	of workload.But the system will not function properly with multiple computers in the network.
+		
+		\item \textbf{Development of Employee Leave Database }
+		\\ This system is developed to support the work of the Human Resource Department of Home Finance Company(HFC) Bank, Ghana.It is a web enabled project.But the size of database increases day by day hence increasing the load on database backup.
+			
+		\item \textbf{Human Resource E-Leave Management }
+		\\It is a decision support system.There is leave rejection as well as leave acceptence,but it does not include solo parent leave and absence with pay.
+		
+		\end{itemize}
 		\end{frame}
 		
-		\subsection{System Study Report}			
+		\subsection{System Study Report} %system study			
 		\begin{frame}{Report of Work Done}{System Study Report}
-		Enter Text
+		There is no existing online leave management system in our college.The faculties of mec gets an opportunity to apply for leave online from anywhere.Granting or denying leave requests can be just a click away and the process would bring in transparency and adherence to college's leave policy.
 		\end{frame}
 	
-	\section{Proposed Project}
+	\section{Proposed Project} % pro proposal
 	\subsection{Problem Statement}				
 		\begin{frame}{Proposed Project}{Problem Statement}
-		Enter Text
+		\textbf{Online Leave Management System} for faculties in colleges and institution to automate the leave applications.
 		\end{frame}
 		
 	\subsection{Proposed Solution}						
 		\begin{frame}{Proposed Project}{Problem Solution}
-		Enter Text
+		Leave Management System is a internet based application.The system can be used to automate the workflow of leave applications and their approval.The periodic crediting of leaves are also automated.Faculties can get details like number of leaves taken by them,leave trends and leave balance instantaneously.
 		\end{frame}
 		
 	\subsection{Hardware \& Software Requirements}						
 		\begin{frame}{Proposed Project}{Hardware \& Software Requirements} 
-		Enter Text
+		\begin{itemize}
+		\item\textbf{Hardware Requirements}
+		\begin{itemize}
+		\item Apache Server(To host in College)
+		\item Minimum Intel Pentium 4 or Higher with 2gb RAM
+		\end{itemize}
+				
+		\item\textbf{Software Requirements}		
+		\begin{itemize}
+		\item Django
+		\item Minimum SQLite 3 and above
+		\item Minimum Python 2.7 and above
+		\item Git
+		\end{itemize}
+		
+		\end{itemize}
 		\end{frame}
 	
 	\section{Weekly Work Schedule}
 		\begin{frame}{Weekly Work Schedule}
 
 		\begin{center}
-		\begin{tabular}{|c|c|}
+		\begin{tabular}{|c|c|c|}
 		\hline
-		Week & Work to be Completed\\
+		\textbf{Week} & \textbf{Work to be Completed} & \textbf{Durations}\\
 		\hline
-		1 & enter text\\
+		1 & Design of Login Page(Frontend) &\\
 		\hline
-		2 & enter text\\
+		2 & Design of Admin Page(Frontend) &\\
 		\hline
-		3 & enter text\\
+		3 & Database Model Design &\\
 		\hline
-		4 & enter text\\
+		4 & Database Manipulation &\\
 		\hline
-		5 & enter text\\
+		5 & Backend Development &\\
 		\hline
-		6 & enter text\\
+		6 & Backend Development &\\		
 		\hline
-		7 & enter text\\
+		7 & Testing &\\
+		\hline
+		8 & Host in College Server &\\
 		\hline
 		\end{tabular}				
 		\end{center}				
